[gd_scene load_steps=5 format=3 uid="uid://vkj5bs5v55pi"]

[ext_resource type="PackedScene" uid="uid://bbf8kxas4flei" path="res://Assets/Models/Game8/star_wars_cr-90/scene.gltf" id="1_ie6xc"]
[ext_resource type="Script" path="res://Scripts/Game8/cr_90.gd" id="1_kxwsv"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gxkhi"]
height = 144.734
radius = 13.8058

[sub_resource type="BoxShape3D" id="BoxShape3D_tleoa"]
size = Vector3(47.8498, 27.7493, 45.8921)

[node name="CR90" type="CharacterBody3D" groups=["Boss"]]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
collision_layer = 2
collision_mask = 0
script = ExtResource("1_kxwsv")

[node name="Sketchfab_Scene" parent="." instance=ExtResource("1_ie6xc")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_gxkhi")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0464859, 0.21814, -52.7523)
shape = SubResource("BoxShape3D_tleoa")

[node name="Gun0" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.3848, 6.77963, 27.2361)

[node name="Gun1" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.471069, 10.7018, 50.535)

[node name="Gun2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.385, 6.78, 27.236)
